--- a/package.json
+++ b/package.json
@@ -45,16 +45,17 @@
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.0",
     "chai-subset": "^1.6.0",
-    "enzyme": "^3.4.2",
-    "jsdom": "^11.12.0",
-    "mocha": "^5.0.5",
+    "enzyme": "2.9.1",
+    "jsdom": "11.1.0",
+    "mocha": "^5.2.0",
     "mocha-webpack": "^1.1.0",
     "react": "^15.5.0",
     "react-dom": "^15.5.0",
+    "react-test-renderer": "^15.5.0",
     "react-intl": "^2.2.3",
     "sinon": "^1.17.7",
     "source-map-support": "^0.4.11",
-    "webpack": "^4.5.0",
+    "webpack": "3.11.0",
     "webpack-cli": "^2.0.14",
     "webpack-node-externals": "^1.7.0"
   }
